--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
       <img src="./images/season_product_image.png" alt="" class="product back-to-position to-right delay-0" />
 
       <div class="text-group">
-        <img src="./images/season_product_text1.png" alt="" class="title back-to-position to-left delay-1" />
-        <img src="./images/season_product_text2.png" alt="" class="description back-to-position to-left delay-2" />
+        <img src="./images/season_product_text1.png" alt="아이스 커피 블렌드" class="title back-to-position to-left delay-1" />
+        <img src="./images/season_product_text2.png" alt="text-img" class="description back-to-position to-left delay-2" />
         <div class="more back-to-position to-left delay-3"> 
           <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
@@ -544,15 +544,15 @@
 
   <section class="reserve-coffee scroll-spy">
     <div class="inner">
-      <img src="./images/reserve_logo.png" alt="" class="reserve-logo back-to-position to-right delay-0" />
+      <img src="./images/reserve_logo.png" alt="icon" class="reserve-logo back-to-position to-right delay-0" />
       <div class="text-group">
-        <img src="./images/reserve_text.png" alt="" class="description back-to-position to-right delay-1" />
+        <img src="./images/reserve_text.png" alt="스타벅스 리저브 커피" class="description back-to-position to-right delay-1" />
         <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
         </div>
       </div>
 
-      <img src="./images/reserve_image.png" alt="" class="product back-to-position to-left delay-3" />
+      <img src="./images/reserve_image.png" alt="beans Picture" class="product back-to-position to-left delay-3" />
 
     </div>
   </section>
